--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+body{
+  background:url("pic/cover.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+}
+
+ul{
+  margin:0;
+  padding:0;
+  display:flex;
+  flex-direction: column;
+}
+
+li{
+  list-style: none;
+  line-height: 1.5rem;
+
+}
+
+button{
+  font-weight: 900;
+  
+}
+
+
+
 .coolTitle {
   text-align: center;
   font-family: 'Oswald', Helvetica, sans-serif;
@@ -20,4 +47,8 @@
 
 .done {
   text-decoration: line-through;
+}
+
+ul{
+  cursor: pointer;
 }
